--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,17 @@
+certifi==2023.5.7
+charset-normalizer==3.1.0
+idna==3.4
+numpy==1.24.3
+psutil==5.9.5
 PySide6==6.5.0
 PySide6-Addons==6.5.0
 PySide6-Essentials==6.5.0
+python-dateutil==2.8.2
+pytz==2023.3
+pywin32==306
+requests==2.30.0
 shiboken6==6.5.0
+six==1.16.0
+tzdata==2023.3
+tzlocal==5.0.1
+urllib3==2.0.2
